@@ -4,7 +4,7 @@
 
   <groupId>io.toolisticon.maven.parent</groupId>
   <artifactId>maven-parent-kotlin-base</artifactId>
-  <version>2024.3.2</version>
+  <version>2024.4.0</version>
 
   <name>Maven Parent - Kotlin Base</name>
   <description>Maven parent for a holistic kotlin lib project.</description>
@@ -31,8 +31,12 @@
     <!-- set to true to skip deployment (of submodule e.g.) -->
     <kp.plugin.skipDeploy>false</kp.plugin.skipDeploy>
     <kp.plugin.generateBackupPoms>false</kp.plugin.generateBackupPoms>
-
     <kp.compile.useIncrementalKotlinCompiler>false</kp.compile.useIncrementalKotlinCompiler>
+    <kp.patternClassITest>**/*ITest.*</kp.patternClassITest>
+    <kp.patternClassTCTest>**/*TCTest.*</kp.patternClassTCTest>
+    <kp.javaOpenModules>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
+    </kp.javaOpenModules>
+    <kp.skipITests>false</kp.skipITests>
 
     <!-- LANGUAGE VERSIONS -->
     <kotlin.version>1.9.23</kotlin.version>
@@ -43,8 +47,11 @@
     <java.version>17</java.version>
     <jdk.version>17</jdk.version>
 
-    <kotlinx-serialization.version>1.6.0</kotlinx-serialization.version>
+    <kotlinx-serialization.version>1.6.3</kotlinx-serialization.version>
+    <kotlinx-coroutines.version>1.8.0</kotlinx-coroutines.version>
     <kotlin-logging.version>3.0.5</kotlin-logging.version>
+
+    <jetbrains-annotations.version>23.0.0</jetbrains-annotations.version>
 
     <!-- TEST -->
     <junit5.version>5.10.2</junit5.version>
@@ -177,6 +184,23 @@
       </dependency>
       <!-- // KOTLIN (from kotlin-bom) -->
 
+      <dependency>
+        <groupId>org.jetbrains.kotlinx</groupId>
+        <artifactId>kotlinx-coroutines-bom</artifactId>
+        <version>${kotlinx-coroutines.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jetbrains.kotlinx</groupId>
+        <artifactId>kotlinx-serialization-bom</artifactId>
+        <version>${kotlinx-serialization.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+
+
       <!-- KLOGGING (use as default) -->
       <dependency>
         <groupId>io.github.microutils</groupId>
@@ -185,13 +209,19 @@
       </dependency>
 
       <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>${jetbrains-annotations.version}</version>
+      </dependency>
+
+      <!-- TEST -->
+      <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
         <version>${junit5.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
     </dependencies>
   </dependencyManagement>
 
@@ -237,6 +267,9 @@
 
           <configuration>
             <jvmTarget>${java.version}</jvmTarget>
+            <apiVersion>1.9</apiVersion>
+            <languageVersion>1.9</languageVersion>
+
             <!-- Compiler plugins need to be configured on this level for IntelliJ to recognize them -->
             <compilerPlugins>
               <!--              <plugin>spring</plugin>-->
@@ -251,7 +284,6 @@
               <!--              <option>all-open:annotation=javax.persistence.Embeddable</option>-->
               <option>all-open:annotation=io.toolisticon.testing.jgiven.JGivenKotlinStage</option>
             </pluginOptions>
-            <annotationProcessorPaths/>
           </configuration>
 
           <executions>
@@ -437,6 +469,27 @@
           </executions>
         </plugin>
 
+        <!-- [TEST] SUREFIRE (version, setup) -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.2.5</version>
+          <configuration>
+            <useSystemClassLoader>false</useSystemClassLoader>
+            <shutdown>kill</shutdown>
+            <runOrder>random</runOrder>
+            <excludes>
+              <exclude>${kp.patternClassITest}</exclude>
+              <exclude>${kp.patternClassTCTest}</exclude>
+            </excludes>
+            <!--suppress UnresolvedMavenProperty -->
+            <argLine>${surefireArgLine} ${kp.javaOpenModules} -Djava.awt.headless=true -XX:+StartAttachListener</argLine>
+            <systemPropertyVariables>
+              <jgiven.report.dir>${project.build.directory}/jgiven-reports/json</jgiven.report.dir>
+            </systemPropertyVariables>
+          </configuration>
+        </plugin>
+
         <!-- [TEST] FAILSAFE (version, itest setup) -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -448,23 +501,46 @@
               <goals>
                 <goal>integration-test</goal>
               </goals>
+              <configuration>
+                <skip>${kp.skipITests}</skip>
+                <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                <includes>
+                  <include>${kp.patternClassITest}</include>
+                  <include>${kp.patternClassTCTest}</include>
+                </includes>
+                <!--suppress UnresolvedMavenProperty -->
+                <argLine>${failsafeArgLine} ${kp.javaOpenModules} -Djava.awt.headless=true -XX:+StartAttachListener</argLine>
+                <systemPropertyVariables>
+                  <jgiven.report.dir>${project.build.directory}/jgiven-reports/json</jgiven.report.dir>
+                </systemPropertyVariables>
+              </configuration>
             </execution>
           </executions>
-          <configuration>
-            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
-            <!--suppress UnresolvedMavenProperty -->
-            <argLine>${failsafeArgLine}</argLine>
-            <systemPropertyVariables>
-              <jgiven.report.dir>${project.build.directory}/jgiven-reports</jgiven.report.dir>
-            </systemPropertyVariables>
-          </configuration>
         </plugin>
 
         <!-- [RELEASE] GPG (version)-->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
-          <version>3.2.1</version>
+          <version>3.2.3</version>
+          <configuration>
+            <!-- pass -Dgpg.keyname=.. and -Dgpg.passphrase=... -->
+            <gpgArguments>
+              <arg>--batch</arg>
+              <arg>--yes</arg>
+              <arg>--pinentry-mode</arg>
+              <arg>loopback</arg>
+            </gpgArguments>
+          </configuration>
+          <executions>
+            <execution>
+              <id>sign-artifacts</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>sign</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
 
         <!-- INSTALL (version) -->
@@ -478,7 +554,21 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.3.1</version>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <phase>package</phase>
+              <goals>
+                <goal>jar-no-fork</goal>
+                <!-- also seen: jar ... which to choose? -->
+              </goals>
+              <configuration>
+                <attach>true</attach>
+                <forceCreation>true</forceCreation>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
 
         <!-- RESOURCES (version, encoding) -->
@@ -491,25 +581,68 @@
           </configuration>
         </plugin>
 
-        <!-- [TEST] SUREFIRE (version, setup) -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.2.5</version>
-
-          <configuration>
-            <useSystemClassLoader>false</useSystemClassLoader>
-            <shutdown>kill</shutdown>
-            <runOrder>random</runOrder>
-            <!--suppress UnresolvedMavenProperty -->
-            <argLine>${surefireArgLine} -Djava.awt.headless=true -XX:+StartAttachListener</argLine>
-            <systemPropertyVariables>
-              <jgiven.report.dir>${project.build.directory}/jgiven-reports</jgiven.report.dir>
-            </systemPropertyVariables>
-          </configuration>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.3.0</version>
         </plugin>
 
         <!-- ========== //MAVEN OFFICIAL -->
+        <!-- [TEST] JACOCO (version, setup) -->
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.8.12</version>
+          <executions>
+            <execution>
+              <id>pre-unit-test</id>
+              <goals>
+                <goal>prepare-agent</goal>
+              </goals>
+              <configuration>
+                <!--suppress UnresolvedMavenProperty -->
+                <skip>${skipTests}</skip>
+                <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                <propertyName>surefireArgLine</propertyName>
+              </configuration>
+            </execution>
+            <execution>
+              <id>pre-integration-test</id>
+              <goals>
+                <goal>prepare-agent-integration</goal>
+              </goals>
+              <configuration>
+                <skip>${kp.skipITests}</skip>
+                <destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>
+                <propertyName>failsafeArgLine</propertyName>
+              </configuration>
+            </execution>
+            <execution>
+              <id>post-unit-test</id>
+              <phase>test</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+              <configuration>
+                <skip>${skipTests}</skip>
+                <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+              </configuration>
+            </execution>
+            <execution>
+              <id>post-integration-test</id>
+              <phase>post-integration-test</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+              <configuration>
+                <skip>${kp.skipITests}</skip>
+                <dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>
+                <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
 
         <!-- BUILD HELPER (version) -->
         <plugin>
@@ -538,57 +671,6 @@
             <keepBranch>false</keepBranch>
             <pushRemote>true</pushRemote>
           </configuration>
-        </plugin>
-
-        <!-- [TEST] JACOCO (version, setup) -->
-        <plugin>
-          <groupId>org.jacoco</groupId>
-          <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.11</version>
-          <executions>
-            <execution>
-              <id>pre-unit-test</id>
-              <goals>
-                <goal>prepare-agent</goal>
-              </goals>
-              <configuration>
-                <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-                <propertyName>surefireArgLine</propertyName>
-              </configuration>
-            </execution>
-            <execution>
-              <id>pre-integration-test</id>
-              <goals>
-                <goal>prepare-agent-integration</goal>
-              </goals>
-              <configuration>
-                <destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>
-                <propertyName>failsafeArgLine</propertyName>
-              </configuration>
-            </execution>
-            <execution>
-              <id>post-unit-test</id>
-              <phase>test</phase>
-              <goals>
-                <goal>report</goal>
-              </goals>
-              <configuration>
-                <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-                <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-              </configuration>
-            </execution>
-            <execution>
-              <id>post-integration-test</id>
-              <phase>post-integration-test</phase>
-              <goals>
-                <goal>report</goal>
-              </goals>
-              <configuration>
-                <dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>
-                <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
-              </configuration>
-            </execution>
-          </executions>
         </plugin>
 
         <!-- [TEST] - JGIVEN (version, configuration, execution) -->
@@ -645,6 +727,11 @@
           </configuration>
         </plugin>
 
+        <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>nexus-staging-maven-plugin</artifactId>
+          <version>1.6.13</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -652,6 +739,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
@@ -663,7 +754,7 @@
         <activeByDefault>false</activeByDefault>
       </activation>
       <build>
-        <defaultGoal>integration-test failsafe:verify</defaultGoal>
+        <defaultGoal>verify</defaultGoal>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -694,20 +785,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-sources</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>jar-no-fork</goal>
-                  <!-- also seen: jar ... which to choose? -->
-                </goals>
-                <configuration>
-                  <attach>true</attach>
-                  <forceCreation>true</forceCreation>
-                </configuration>
-              </execution>
-            </executions>
           </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -745,7 +822,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
-            <version>3.3.0</version>
             <configuration>
               <archive>
                 <manifest>
@@ -756,35 +832,16 @@
             </configuration>
           </plugin>
 
-          <!-- [RELEASE] GPG (version, configuration, execution)-->
+          <!-- [RELEASE] GPG -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <configuration>
-              <!-- pass -Dgpg.keyname=.. and -Dgpg.passphrase=... -->
-              <gpgArguments>
-                <arg>--batch</arg>
-                <arg>--yes</arg>
-                <arg>--pinentry-mode</arg>
-                <arg>loopback</arg>
-              </gpgArguments>
-            </configuration>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
           </plugin>
 
           <!-- [RELEASE] NEXUS (version, config, execution) -->
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.13</version>
             <configuration>
               <autoReleaseAfterClose>true</autoReleaseAfterClose>
               <serverId>ossrh</serverId>
